[OPP-1247] legge til i java-module system for tomcat